--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ layout: default
 </div>
 
 <div class="footer">
-    <p>&copy; 2018 <a href="https://sops.github.io">sops</a>, unless otherwise noted.</p>
+    <p>Under cc0, All rights waived. <a href="https://sops.github.io">sops</a></p>
 </div>
