--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ layout: default
 </div>
 
 <div class="footer">
-    <p>Under cc0, All rights waived. <a href="https://sops.github.io">sops</a></p>
+    <p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p>
 </div>
