--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="blog">
+<div>
     <h1></h1>
     <ul>
         {% for post in site.posts %}
@@ -11,8 +11,4 @@ layout: default
         </li>
         {% endfor %}
     </ul>
-</div>
-
-<div class="footer">
-    <p><img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="16" height="16" alt="cc0"> All rights waived. <a href="https://sops.github.io">sops</a></p>
 </div>
